Fixed overflow problem

--- a/css/about.css
+++ b/css/about.css
@@ -34,9 +34,13 @@
     height: auto;
     margin: 10px;
     display: grid;
-    float: none;
     position: relative;
-    top: 10px;
+    padding: 10px;
+    float: left;
+}
+
+#team-container h1 {
+    border-bottom: solid 5px #F00;
 }
 
 #team {
